Through line 325, figure 2

--- a/Mandel.bib
+++ b/Mandel.bib
@@ -21663,15 +21663,19 @@ archivePrefix = {arXiv},
 
 @ARTICLE{Broekgaarden:2021,
        author = {{Broekgaarden}, Floor S. and {Berger}, Edo and {Neijssel}, Coenraad J. and {Vigna-G{\'o}mez}, Alejandro and {Chattopadhyay}, Debatri and {Stevenson}, Simon and {Chruslinska}, Martyna and {Justham}, Stephen and {de Mink}, Selma E. and {Mandel}, Ilya},
-        title = "{Impact of Massive Binary Star and Cosmic Evolution on Gravitational Wave Observations I: Black Hole - Neutron Star Mergers}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - High Energy Astrophysical Phenomena},
+        title = "{Impact of massive binary star and cosmic evolution on gravitational wave observations I: black hole-neutron star mergers}",
+      journal = {\mnras},
+     keywords = {(transients:) black hole-neutron star mergers, gravitational waves, stars: evolution, Astrophysics - High Energy Astrophysical Phenomena},
          year = 2021,
-        month = mar,
+        month = dec,
+       volume = {508},
+       number = {4},
+        pages = {5028-5063},
+          doi = {10.1093/mnras/stab2716},
 archivePrefix = {arXiv},
        eprint = {2103.02608},
  primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210302608B},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021MNRAS.508.5028B},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -30031,15 +30035,19 @@ archivePrefix = {arXiv},
 
 @ARTICLE{Galaudage:2021,
        author = {{Galaudage}, Shanika and {Talbot}, Colm and {Nagar}, Tushar and {Jain}, Deepnika and {Thrane}, Eric and {Mandel}, Ilya},
-        title = "{Building better spin models for merging binary black holes: Evidence for non-spinning and rapidly spinning nearly aligned sub-populations}",
-      journal = {arXiv e-prints},
-     keywords = {General Relativity and Quantum Cosmology, Astrophysics - High Energy Astrophysical Phenomena},
+        title = "{Building Better Spin Models for Merging Binary Black Holes: Evidence for Nonspinning and Rapidly Spinning Nearly Aligned Subpopulations}",
+      journal = {\apjl},
          year = 2021,
-        month = sep,
+        month = nov,
+       volume = {921},
+       number = {1},
+          eid = {L15},
+        pages = {L15},
+          doi = {10.3847/2041-8213/ac2f3c},
 archivePrefix = {arXiv},
        eprint = {2109.02424},
  primaryClass = {gr-qc},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210902424G},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...921L..15G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -30087,17 +30095,22 @@ archivePrefix = {arXiv},
 
 @ARTICLE{Fragione:2021,
        author = {{Fragione}, Giacomo and {Loeb}, Abraham and {Rasio}, Frederic A.},
-        title = "{Impact of natal kicks on merger rates and spin-orbit misalignments of black hole -- neutron star mergers}",
-      journal = {arXiv e-prints},
-     keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies},
+        title = "{Impact of Natal Kicks on Merger Rates and Spin-Orbit Misalignments of Black Hole-Neutron Star Mergers}",
+      journal = {\apjl},
          year = 2021,
-        month = aug,
+        month = sep,
+       volume = {918},
+       number = {2},
+          eid = {L38},
+        pages = {L38},
+          doi = {10.3847/2041-8213/ac225a},
 archivePrefix = {arXiv},
        eprint = {2108.06538},
  primaryClass = {astro-ph.HE},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/2021arXiv210806538F},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...918L..38F},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{Pratten:2021,
        author = {{Pratten}, Geraint and {Garc{\'\i}a-Quir{\'o}s}, Cecilio and {Colleoni}, Marta and {Ramos-Buades}, Antoni and {Estell{\'e}s}, H{\'e}ctor and {Mateu-Lucena}, Maite and {Jaume}, Rafel and {Haney}, Maria and {Keitel}, David and {Thompson}, Jonathan E. and {Husa}, Sascha},
@@ -30933,10 +30946,13 @@ archivePrefix = {arXiv},
 @ARTICLE{Reynolds:2020,
        author = {{Reynolds}, Christopher S.},
         title = "{Observational Constraints on Black Hole Spin}",
-      journal = {arXiv e-prints},
+          journal = {\araa},
+          year = 2021,
+    month = sep,
+   volume = 59,
+    pages = {117},
+      doi = {10.1146/annurev-astro-112420-035022},
      keywords = {Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Astrophysics of Galaxies, General Relativity and Quantum Cosmology},
-         year = 2020,
-        month = nov,
 archivePrefix = {arXiv},
        eprint = {2011.08948},
  primaryClass = {astro-ph.HE},
@@ -31001,3 +31017,10 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Saracino:2021,
+        author = {{Saracino}, S. and others},
+        title="{A black hole detected in the young massive LMC cluster NGC 1850}",
+        journal = {\mnras},
+        year = 2021, 
+	note = {https://academic.oup.com/mnras/advance-article-abstract/doi/10.1093/mnras/stab3159/6424300}
+}
