--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -116,7 +116,7 @@
 \affiliation[4]{organization={kW Engineering}, city={Oakland}, state={California}, postcode={94612}, \country={USA}}
 
 \begin{abstract}
-The LIGO and Virgo detectors have directly observed gravitational waves from mergers of pairs of stellar-mass black holes, along with a smaller number of mergers involving neutron stars.  These observations raise the hope that compact object mergers could be used as a probe of stellar and binary evolution, and perhaps of stellar dynamics. This colloquium-style article summarises the existing observations, describes theoretical predictions for formation channels of merging stellar-mass black-hole binaries along with their rates and observable properties, and presents some of the prospects for gravitational-wave astronomy.
+The LIGO and Virgo detectors have directly observed gravitational waves from mergers of pairs of stellar-mass black holes, along with a smaller number of mergers involving neutron stars.  These observations raise the hope that compact object mergers could be used as a probe of stellar and binary evolution, and perhaps of stellar dynamics. This colloquium-style article summarises the existing observations, describes theoretical predictions for formation channels of merging stellar-mass black-hole binaries along with their rates and observable properties, and presents some prospects for gravitational-wave astronomy.
 \end{abstract}
 
 %\begin{keyword}
@@ -150,7 +150,7 @@ We summarise the existing observations of merging binary black holes and closely
 \subsubsection{The confirmed detections to date}
 During its first observing run, lasting from September of 2015 through January of 2016, the advanced LIGO detector network observed three signals from the mergers of binary black holes:  GW150914 \citep{GW150914}, GW151226 \citep{GW151226} and GW151012 \citep{GW150914:rates,BBH:O1}.  During the second observing run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections were announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of these with the participation of the Virgo gravitational-wave observatory \citep{AdvVirgo}.  The first half of the third observing run, which lasted from April to October of 2019, saw detections of nearly 40 binary black hole mergers \citep{GWTC2,Abbott:2021-GWTC-2-1}, among which GW190412 \citep{GW190412}, GW190814 \citep{GW190814}, GW190521 \citep{GW190521} stood out for their mass and mass ratio measurements (see section \ref{sec:GWevents}).  Approximately 30 more binary black holes (the exact numbers here and above depend on the assumed threshold for confident detections) were observed during the second half of the third observing run, from November 2019 through March 2020 \citep{GWTC3}.  Additional candidates were found by search pipelines external to the LIGO-Virgo-KAGRA collaborations in LIGO-Virgo public data \citep{Nitz:2019,Nitz:2021,Venumadhav:2019,Venumadhav:2020}.  
 
-Meanwhile, the observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  Another confident detection of a binary neutron star merger, GW190425 \citep{GW190425}, as well as two mergers of neutron stars with black holes,  GW200105 and GW200115 \citep{GW200105}, did not yield electromagnetic counterparts.  
+Meanwhile, the detection of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  Another confident detection of a binary neutron star merger, GW190425 \citep{GW190425}, as well as two mergers of neutron stars with black holes,  GW200105 and GW200115 \citep{GW200105}, did not yield electromagnetic counterparts.  
 We shall focus on binary black holes for the remainder of this article.
 
 \subsubsection{Information encoded in gravitational-wave signals}
@@ -165,14 +165,14 @@ The masses of the black-hole binaries observed to date are shown in figure \ref{
 \begin{figure}
 	\centering
 	\includegraphics[width=0.99\textwidth]{Graveyard.png}
-	\caption{The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources and reported in the GWTC-2 catalog (blue), as well as masses of black holes in X-ray binaries (purple).  Galactic neutron stars observed as radio pulsars (yellow) and the neutron star candidates in merging compact binaries (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Error bars are indicative of the measurement uncertainty.  Figure courtesy of Aaron Geller, Northwestern University and LIGO-Virgo collaborations.}\label{fig:BHmasses} 
+	\caption{The masses (in solar masses, vertical axis) of black holes observed as gravitational-wave sources and reported in the GWTC-3 catalog (blue), as well as masses of black holes in X-ray binaries (red).  Galactic neutron stars observed as radio pulsars (yellow) and the neutron star candidates in merging compact binaries (orange) appear at the bottom of the figure.  Merger product masses are shown for gravitational-wave detections. Placement on the horizontal axis is arbitrary.  Figure courtesy of Aaron Geller, Northwestern University and LIGO-Virgo-KAGRA collaborations.}\label{fig:BHmasses} 
 \end{figure}
 
-\textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star) to $\simeq 80 M_\odot$ for GW190521 (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}).  There is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  Once selection effects are accounted for, the mass distribution for the more massive black hole appears to be consistent with a power-law $p(M) \propto M^{-2.6}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}, with an additional peak at around $33 M_\odot$.  The vast majority of merging binary black holes, $\approx 97\%$, have both companion masses below $45 M_\odot$ \citep{GWTC2:pop}.   
+\textbf{Masses:} The individual black-hole masses span a range from $\simeq 2.6 M_\odot$ (assuming the lower-mass object in GW190814 is a black hole rather than a neutron star \citep{GW190814}) to $\simeq 80 M_\odot$ for GW190521 \citep{GW190521} (or more, see \cite{FishbachHolz:2020,NitzCapano:2021}) and GW200220\_061928 \citep{GWTC3}.  There is a significant selection bias  toward detecting more massive systems, because sensitivity to gravitational waves from binary mergers depends on the system mass.  The gravitational-wave amplitude, and hence the maximum (horizon) distance at which a source is detectable, scales as $M_c^{5/6}$ for inspiral-dominated signals. The surveyed volume therefore scales as $M_c^{2.5}$.  Once selection effects are accounted for, the mass distribution for the more massive black hole appears to be consistent with a power-law $p(M) \propto M^{-3.4}$, reminiscent of the stellar initial mass function \citep{Salpeter:1955}, with an additional peak at around $34 M_\odot$.  The vast majority of merging binary black holes, $\approx 99\%$, have both companion masses below $45 M_\odot$ \citep{GWTC3:pop}.   
 
-The vast majority of observed merging binary black holes are consistent with having equal-mass components, though the poorly measured mass ratios could still be as extreme as $4:1$ in some cases.  Two observed events, GW190412 with a mass ratio of $3:1$ \citep{GW190412}, and GW190814 with a mass ratio of $9:1$ \citep{GW190814}, are definitely inconsistent with equal masses.  
+Most observed merging binary black holes are consistent with having equal-mass components, though the poorly measured mass ratios span a very broad range in some cases.  Several observed events, such as GW190412 with a mass ratio of $3:1$ \citep{GW190412}, and GW190814 with a mass ratio of $9:1$ \citep{GW190814}, are definitely inconsistent with equal masses.  
 
-\textbf{Black-Hole Spins:} Individual black-hole spins are difficult to measure precisely with gravitational waves.  Most observed mergers are consistent with negligible spins, but some events show evidence of non-zero `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum.  The spin distribution is a topic of active ongoing discussion \citep[e.g.,][]{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021}.  In particular, \citet{Galaudage:2021} conclude that $\sim 80\%$ of merging binary black holes have negligible spins on both components (consistent with zero), while the remaining 20\% have positive and preferentially aligned spins, with no observed events displaying a definite negative $\chi_\textrm{eff}$.  The degree of precession due to spin-orbit misalignment is also unclear; there may be some evidence for it in individual events, such as GW190521 \citep{GW190521}, though other explanations for its signal morphology (e.g., eccentricity, see below) have been proposed.
+\textbf{Black-Hole Spins:} Individual black-hole spins are difficult to measure precisely with gravitational waves.  Most observed mergers are consistent with negligible spins, but some events show evidence of non-zero `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum.  The spin distribution is a topic of active ongoing discussion \citep[e.g.,][]{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021,GWTC3:pop}.  In particular, \citet{Galaudage:2021} conclude that $\sim 80\%$ of merging binary black holes have negligible spins on both components (consistent with zero), while the remaining 20\% have positive and preferentially aligned spins, with no observed events displaying a definite negative $\chi_\textrm{eff}$.  The degree of precession due to spin-orbit misalignment is also unclear; there may be some evidence for it in individual events, such as GW190521 \citep{GW190521}, though other explanations for its signal morphology (e.g., eccentricity, see below) have been proposed.
 
 \textbf{Distances and Sky Locations:} All of the observed binary black hole signals came from median redshifts between $z\sim 0.05$ and $z \sim 0.9$ (distances of around 250 Mpc to 6 Gpc), consistent with the detector sensitivity during the first three observing runs of advanced LIGO \citep{GWTC3}.  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170814 reduced the sky region to only 60 deg$^2$ \citep{GW170814}.   The best-localised binary black hole mergers have 90\% credible sky localisations of only $\approx 20$ deg$^2$ \citep{GWTC2}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
 
@@ -193,30 +193,31 @@ A wide variety of electromagnetic observations inform our understanding of the e
 \item Galactic binary radio pulsars \citep[e.g.,][]{Tauris:2017};
 \item short gamma-ray bursts \citep[e.g.,][]{Berger:2014};
 \item supernovae and long gamma-ray bursts \citep[e.g.,][]{Cantiello:2007,Szecsi:2017,Bavera:2021};
-\item X-ray binaries \citep[e.g.,][]{TaurisvdH:2006}.
+\item X-ray binaries \citep[e.g.,][]{TaurisvdH:2006};
+\item black holes in detached binaries \citep[e.g.,][]{Thompson:2019} and microlensing observations \citep[e.g.,][]{WyrzykowskiMandel:2019}.
 \end{itemize}
-We first focus on X-ray binaries, the type of binary system with the closest connection to merging binary black holes, although only a small minority of black-hole X-ray binaries will ultimately evolve into merging black holes \citep[e.g.,][]{CygnusX3:2012,Neijssel:2020CygX1}. Black-hole X-ray binaries consist of a star transferring mass onto a black-hole companion, leading to the emission of X-ray radiation from the accretion disk surrounding the black hole.  We then discuss detached black-hole binaries, black-hole microlensing observations, and selection effects.
+We first focus on X-ray binaries, the type of binary system with the closest connection to merging binary black holes, although only a small minority of black-hole X-ray binaries will ultimately evolve into merging black holes \citep[e.g.,][]{CygnusX3:2012,Neijssel:2020CygX1}. We then discuss detached black-hole binaries, black-hole microlensing observations, and selection effects.
 
 \subsubsection{X-ray binaries}\label{sec:XRB}
 
-X-ray binaries containing accreting black holes can be divided into two categories, low-mass and high-mass, in reference to the mass of the black hole's companion star. The accretion process differs between the two types: in low-mass X-ray binaries, the tidal field of the black hole is causing mass to stream from the companion on to the black hole in the process known as Roche-lobe overflow, while in high-mass X-ray binaries, the black hole accretes only a fraction of the material (stellar wind) driven off the companion's surface.
+Black-hole X-ray binaries consist of a star transferring mass onto a black-hole companion, leading to the emission of X-ray radiation from the accretion disk surrounding the black hole.  X-ray binaries containing accreting black holes can be divided into two categories, low-mass and high-mass, in reference to the mass of the black hole's companion star. The accretion process differs between the two types: in low-mass X-ray binaries, the tidal field of the black hole is causing mass to stream from the companion on to the black hole in the process known as Roche-lobe overflow, while in high-mass X-ray binaries, the black hole accretes only a fraction of the material (stellar wind) driven off the companion's surface.
 
 \textbf{Black-Hole Masses:} 
 Until recently, black-hole X-ray binaries with dynamical mass measurements provided the only secure measurements of black-hole masses other than the gravitational-wave observations described above, though this is now changing thanks to observations of detached binaries and microlensing data (see section \ref{sec:lensing}).  \citet{Ozel:2010} and \citet{Farr:2011} summarise the mass distribution of black-hole X-ray binaries.  They find a distribution which ranges from $> 20\, M_\odot$ for the heaviest high-mass X-ray binaries to 4 or 5 solar masses for the lightest low-mass X-ray binaries, with a possible mass gap between neutron-star and black-hole masses, though see \cite{Kreidberg:2012} for possible biases in mass measurements of some low-mass X-ray binaries and section \ref{sec:lensing} for evolutionary selection effects.  The uncertainty regarding the radial velocity measurements in high-mass X-ray binaries such as IC10 X-1 \citep{Laycock:2015} mean that the most massive confirmed stellar-mass black hole is Cygnus X-1, with a dynamical mass measurement of $21 \pm 2\, M_\odot$ \citep{MillerJones:2021}.   The measured masses of black holes in X-ray binaries are sketched in figure \ref{fig:BHmasses}, along with the masses of the observed gravitational-wave sources.  This figure does not include the speculative but potentially very exciting evidence for intermediate-mass black holes \citep{MillerColbert:2004,Greene:2019,Paynter:2021}; if few-hundred solar-mass black holes generically exist in globular clusters, they will substitute into merging binaries and ultimately be observable as gravitational-wave sources \citep[e.g.,][]{Mandel:2008,IMBBH:O1}.
 
-\textbf{Black-Hole Spin Magnitudes:} Black-hole X-ray binaries also provide an opportunity for measuring black-hole spins \citep[see][for recent reviews]{MillerMiller:2015,Middleton:2016}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black-hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics \citep[e.g.,][]{Basak:2017,Kawano:2017}.  For example, out of six systems for which both disk continuum and disk reflection spin measurements are available, the two methods are inconsistent at the $3$ or $5$ sigma level for two systems, and for one system the statistical uncertainty is so large as to span nearly the full allowed range from $0$ to $1$ \cite{MillerMiller:2015}.  However, for the remaining three systems with both measurements available, both methods yield spins $\chi \gtrsim 0.9$.  
+\textbf{Black-Hole Spin Magnitudes:} Black-hole X-ray binaries also provide an opportunity for measuring black-hole spins \citep[see][for recent reviews]{MillerMiller:2015,Reynolds:2020}.  Continuum fitting of the X-ray flux from the accretion disk and iron K-$\alpha$ line fits to the disk reflection profile can both be used to infer the location of the inner edge of the disk, which is assumed to correspond to the radius of the innermost stable circular orbit, a sensitive function of black-hole spin.  Quasi-periodic oscillations also have the potential to provide spin measurements.  Unfortunately, the underlying physical mechanisms are not fully understood at present, and the inferred spins may suffer from significant systematics \citep[e.g.,][]{Basak:2017,Kawano:2017}.  Interestingly, all high-mass X-ray binaries with available spin measurements show evidence of rapid dimensionless spins in excess of $\gtrsim 0.85$, where 1 is the spin magnitude of a maximally spinning black hole \citep{Reynolds:2020}.
 
 \textbf{Black-Hole Spin Directions:} We know even less about the spin directions than the spin magnitudes.  Although black-hole spin-orbit alignment is assumed in continuum flux measurements \citep{MillerMiller:2015}, some black-hole X-ray binaries, including GRO J1655-40 \citep{Martin:2008}, 4U 1543-47 \citep{MorningstarMiller:2014} and particularly V4641 Sgr \citep{Orosz:2001,Martin:2008b} appear to indicate that the microquasar jet, presumably aligned with the BH spin axis, is misaligned with the orbit.  Moreover, initial stellar spins in binaries have been observed to be misaligned \citep[e.g.,][]{Albrecht:2009,Albrecht:2014}, though there are opportunities for subsequent realignment during binary evolution, as described below.
 
-\textbf{Inconsistency with Spin Observations from Gravitational-wave Sources?} These three rapidly spinning black holes include two high-mass X-ray binaries: LMC X-1 and Cygnus X-1.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution.  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then the observed high-mass X-ray binaries and merging binary black holes should predominantly sample different evolutionary histories (see section \ref{BHspins}).
+\textbf{Inconsistency with Spin Observations from Gravitational-wave Sources?} The rapidly spinning black holes include all three in high-mass X-ray binaries with accurate mass measurements: Cygnus X-1, LMC X-1 and M33 X-7.  This is significant, because unlike long-lived low-mass X-ray binaries, whose spin magnitudes could be altered by accretion from the companion, especially if they started out with intermediate-mass companions \citep{Podsiadlowski:2003,Fragos:2015}, high-mass X-ray binaries are too short-lived to enable significant spin changes due to accretion \citep{KingKolb:1999}.  Isolated binaries that form binary black holes are expected to go through the high-mass X-ray binary phase during their evolution (though \citet{HiraiMandel:2021} argue that only binaries with optical companions that are close to Roche-lobe overflow may be X-ray bright).  Thus, if the high spin magnitude measurements in black-hole X-ray binaries are to be believed, then the observed high-mass X-ray binaries and merging binary black holes should predominantly sample different evolutionary histories (see section \ref{BHspins}).
 
 \subsubsection{Other electromagnetic black hole mass measurements} \label{sec:lensing}
 
-\textbf{Detached binaries:} Until recently, only X-ray binaries allowed accurate mass measurements of stellar-mass black holes.  However, this has recently changed with observations of wide binaries with a luminous companion detached from a non-accreting black hole.  Examples of such observations include two $\sim 3\, M_\odot$ black holes in detached binaries \citep{Thompson:2019,Jayasinghe:2021} along with several black holes with lower limit mass measurements in detached binaries observed in a globular cluster \citep{Giesers:2019}.  Surveys like Gaia may detect hundreds of detached black hole binaries \citep[e.g.,][]{Chawla:2021}.  However, the case of LB-1, which was initially thought to contain an extremely massive black hole in a wide binary, highlights some of the challenges of accurately measuring black hole masses in detached systems \citep{Liu:2019,Eldridge:2020,AbdulMassih:2020,Shenar:2020}.   
+\textbf{Detached binaries:} Until recently, only X-ray binaries allowed accurate mass measurements of stellar-mass black holes.  However, this has recently changed with observations of wide binaries with a luminous companion detached from a non-accreting black hole.  Examples of such observations include two $\sim 3\, M_\odot$ black holes in detached binaries \citep{Thompson:2019,Jayasinghe:2021} along with several black holes in detached binaries in globular clusters \citep{Giesers:2019,Saracino:2021}.  Surveys like Gaia may detect hundreds of detached black hole binaries \citep[e.g.,][]{Chawla:2021}.  However, the case of LB-1, which was initially thought to contain an extremely massive black hole in a wide binary, highlights some of the challenges of accurately measuring black hole masses in detached systems \citep{Liu:2019,Eldridge:2020,AbdulMassih:2020,Shenar:2020}.   
 
-\textbf{Microlensing:} Microlensing observations provide a tool for measuring the masses of single black holes.  When such black holes pass between a luminous star and the observer, they temporarily lens the star, increasing its luminosity while the alignment is roughly within the Einstein ring.  Mircolensing measurements, together with gravitational-wave and detached black-hole binary observations, suggest that there is no evidence for a mass gap between neutron stars and black holes \citep{WyrzykowskiMandel:2019, Mroz:2021}.  However, there is a possible degeneracy between lower lens masses and higher lens-source relative velocities, since both reduce the transient duration; thus, the low-mass microlensing black-hole candidates could be consistent with higher-mass black holes receiving natal kicks of $\gtrsim 80$ km s$^{-1}$.
+\textbf{Microlensing:} Microlensing observations provide a tool for measuring the masses of single black holes.  When such black holes pass between a luminous star and the observer, they temporarily lens the star, increasing its luminosity while the alignment is roughly within the lens's Einstein ring.  Mircolensing measurements, together with gravitational-wave and detached black-hole binary observations, suggest that there is no evidence for a mass gap between neutron stars and black holes \citep{WyrzykowskiMandel:2019, Mroz:2021}.  However, there is a possible degeneracy between lower lens masses and higher lens-source relative velocities, since both reduce the transient duration; thus, the low-mass microlensing black-hole candidates could be consistent with higher-mass black holes receiving natal kicks of $\gtrsim 80$ km s$^{-1}$.
 
-\textbf{Selection effects:} Finally, it is worth remembering that all observations are likely to suffer from a range of selection effects.  These could be Malmquist biases which favour observations of the brightest or loudest sources, such as the enhanced detectability of more massive binaries in gravitational-wave data or of more rapidly accreting X-ray binaries (though see \citet{HiraiMandel:2021}, who point out that more complex detectability thresholds related to wind morphology may be relevant for high-mass X-ray binaries).  Alternatively, they could be evolutionary selection effects which can skew the observed populations; for example, X-ray binaries may contain few low-mass black holes, creating an impression of a mass gap between neutron star and black hole masses, if low-mass black holes get larger natal kicks that tend to disrupt binaries \citep{Mandel:2020}.
+\textbf{Selection effects:} Finally, it is worth remembering that all observations are likely to suffer from a range of selection effects.  These could be Malmquist biases which favour observations of the brightest or loudest sources, such as the enhanced detectability of more massive binaries in gravitational-wave data or of more rapidly accreting X-ray binaries (though more complex detectability thresholds related to wind morphology may be relevant for high-mass X-ray binaries \citep{HiraiMandel:2021}).  Alternatively, they could be evolutionary selection effects which can skew the observed populations; for example, X-ray binaries may contain few low-mass black holes, creating an impression of a mass gap between neutron star and black hole masses, if low-mass black holes get larger natal kicks that tend to disrupt binaries \citep{Mandel:2020}.
 
 
 \section{Formation scenarios}\label{form}
@@ -227,10 +228,10 @@ When the detection of GW150914 was first announced, many were surprised that it 
 \subsection{The Orbital Separation Question}
 
 
-\textbf{Only very tight binaries can merge via gravitational waves.} Gravitational-wave emission is a very strong function of separation. During a compact binary merger, the luminosity in gravitational waves is a few thousandths of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ ergs per second, such mergers ``outshine'' all the stars in the visible Universe combined. But because gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, widely separated binaries lose energy very slowly and undergo only negligible inspiral over billions of years. Only very close binaries can be brought to merger by gravitational waves within the age of the universe; \autoref{fig:periapsis} shows the maximum initial separation for an equal-mass binary to merge on this timescale. For the two $\sim 30 M_\odot$ black holes responsible for GW150914, the initial separation must have been less than $\sim 50 R_\odot$ -- just a quarter of the distance from the Earth to the Sun -- if the merger was driven by gravitational-wave emission alone.
+\textbf{Only very tight binaries can merge via gravitational waves.} Gravitational-wave emission is a very strong function of orbital separation. During a compact binary merger, the luminosity in gravitational waves is a few thousandths of the Planck luminosity, $c^5/G$ \citep[e.g.,][]{Cardoso:2018}; at nearly $10^{57}$ ergs per second, such mergers ``outshine'' all the stars in the visible Universe combined. But because gravitational-wave luminosity is inversely proportional to the fifth power of the binary separation \citep{Peters:1964}, widely separated binaries lose energy very slowly and undergo only negligible inspiral over billions of years. Only very close binaries can be brought to merger by gravitational waves within the age of the universe; \autoref{fig:periapsis} shows the maximum initial separation for an equal-mass binary to merge on this timescale. For the two $\sim 30 M_\odot$ black holes responsible for GW150914, the initial separation must have been less than $\sim 50 R_\odot$ -- just a quarter of the distance from the Earth to the Sun -- if the merger was driven by gravitational-wave emission alone.
 
 
-\textbf{But the black holes' parent stars cannot get so close.} Stars expand as they evolve. Even our Sun will reach roughly an astronomical unit in size during its giant phase; the stars that leave behind black holes (above $\sim 20 M_\odot$  at birth) may reach thousands of solar radii at their maximal extent. The maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. There appears to be a problem. If the parent stars begin life in a close binary with a separation from which gravitational waves could bring their remnants together, the stars will expand to sizes larger than their separation as they evolve, and we might therefore expect that they would merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse, their remnant binaries will take many millions of times longer than the age of the Universe to merge. In either case, no gravitational-wave sources would exist today. 
+\textbf{But the black holes' parent stars cannot get so close.} Stars expand as they evolve. Even our Sun will reach roughly an astronomical unit in size during its giant phase; the stars that leave behind black holes (above $\sim 20 M_\odot$  at birth) may reach thousands of solar radii at their maximal extent. The maximum stellar radius as a function of initial mass is plotted in \autoref{fig:Rmax}. There appears to be a problem. If the parent stars begin life in a close binary with a separation from which gravitational waves could bring their remnants together, the stars will expand to sizes much larger than their separation as they evolve, and we might therefore expect that they would merge long before they collapse into black holes. If they start sufficiently far apart to avoid merger before collapse into black holes, their remnant binaries will take many millions of times longer than the age of the Universe to merge. In either case, no gravitational-wave sources would exist today. 
 
 \textbf{The problem is already there at birth.} In fact, for reasonable models of wind-driven mass loss and mass loss during supernovae, even the initial stellar radii at the start of the main sequence are too large to fit into a binary that could merge within the age of the Universe just through gravitational-wave emission.  The black `Roche Lobe' curve in \autoref{fig:Rmax} shows the maximum size that a star could have in order to fit into a circular, merging equal-mass binary (see \autoref{fig:periapsis}).  This size is smaller than the zero-age main sequence radius for all stellar masses shown in the figure: the separation problem thus exists even without accounting for the exacerbating factors of stellar expansion or binary widening through mass loss.
 
@@ -524,5 +525,7 @@ Vicky: refs on p. 4 (list of other observables), 5 (XRBs and their discussion), 
 isolated channel: Srinivasan 1989? BBHs: Braginsky & Thorne (check Levin's FB)?
 
 AGN disks -- see Bence
+
+\citet{FishbachKalogera:2021}
 
 
