--- a/Mandel.bib
+++ b/Mandel.bib
@@ -30717,8 +30717,8 @@ archivePrefix = {arXiv},
 @ARTICLE{Mandel:2021,
        author = {{Mandel}, Ilya},
         title = "{An Accurate Analytical Fit to the Gravitational-wave Inspiral Duration for Eccentric Binaries}",
-      journal = {Res. Notes AAS},
-     keywords = {Gravitational wave astronomy, 675},
+      journal = {Research Notes of the American Astronomical Society},
+     keywords = {Gravitational wave astronomy, 675, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
          year = 2021,
         month = oct,
        volume = {5},
@@ -30726,9 +30726,13 @@ archivePrefix = {arXiv},
           eid = {223},
         pages = {223},
           doi = {10.3847/2515-5172/ac2d35},
+archivePrefix = {arXiv},
+       eprint = {2110.09254},
+ primaryClass = {astro-ph.HE},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2021RNAAS...5..223M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
 
 @ARTICLE{IaconiDeMarco:2019,
        author = {{Iaconi}, Roberto and {De Marco}, Orsola},
