--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -239,7 +239,7 @@ When the detection of GW150914 was first announced, many were surprised that it 
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\textwidth]{M-rp-log.png}
-	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have while still merging within the age of the Universe through gravitational-wave emission, for four different choices of initial eccentricity: $e=0$, 0.9, 0.99, and 0.999 from the top down.\label{fig:periapsis}}
+	\caption{Maximum initial periapsis separation that a binary black hole with equal-mass components (as given on the ordinate) can have while still merging within 14 Gyr through gravitational-wave emission, for four different choices of initial eccentricity: $e=0$, 0.9, 0.99, and 0.999 from the top down.  Computed using the \citet{Mandel:2021} fit to \citet{Peters:1964}. \label{fig:periapsis}}
 \end{figure}
 	
 \begin{figure}
